--- a/node/package.json
+++ b/node/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js"
+    "start": "nodemon ./main.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Henrique",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
